<resources>
    <string name="app_name">Safe Internet</string>
    <string name="title_activity_main">Main Screen</string>
    <string name="title_home">Home</string>
    <string name="title_activity_add">Add Activity</string>
    <string name="add_vid">Add Video</string>
    <string name="vid_name">Video Name</string>
    <string name="upload">Upload</string>
    <string name="add_web">Add Website</string>
    <string name="web_name">Website Name</string>
    <string name="web_url">Website URL</string>
    <string name="add">Add</string>
    <string name="main_tab_content">Here is going to be some word about the owners of the app</string>
    <string name="write_a_name">Write a Name</string>
    <string name="uploading">Uploading the picture .......</string>
    <string name="picture_uploaded">Picture Uploaded</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="done">Done</string>
    <string name="website_added">Website added</string>
    <string name="must_fill_url">You must fill the website name and URL</string>
    <string name="vid_bottom_tab">Videos</string>
    <string name="web_bottom_tab">Websites</string>

    <string-array name="titles">
        <item>Home</item>
        <item>Videos</item>
        <item>Websites</item>
        <item>Info</item>
        <item>Books</item>
    </string-array>
    <string-array name="add_tab_items">
        <item>Video</item>
        <item>Website</item>
        <item>Info</item>
        <item>Books</item>
    </string-array>

    <string name="youtube_api_key" translatable="false">AIzaSyAAM8D-U4ivkoOY00C5C-oGHnSgCbHbemg</string>
    <string name="title_activity_youtube">Youtube Video</string>

    <string name="title_activity_web">Web Page</string>
    <string name="info_bottom_tab">Info</string>
    <string name="book_bottom_tab">Books</string>
    <string name="video_added">Video Added</string>
    <string name="book_added">Book Added</string>
    <string name="book_title">Book Title</string>
    <string name="book_link">Book Link</string>
    <string name="info">The Information</string>
    <string name="info_added">Info Added</string>
    <string name="video_link">Video Link</string>
    <string name="appbar_scrolling_view_behavior" translatable="false" />
</resources>
