<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_video_library_black_24dp"
        android:title="@string/vid_bottom_tab" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/web_bottom_tab" />
    <item
        android:id="@+id/info"
        android:icon="@drawable/info_logo"
        android:title="@string/info_bottom_tab" />
    <item
        android:id="@+id/books"
        android:icon="@drawable/book_logo"
        android:title="@string/book_bottom_tab" />
</menu>
