<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddBookFragment"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:hint="@string/book_title"
        android:id="@+id/title_etxt"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:layout_marginTop="10dp"
        android:hint="@string/book_link"
        android:id="@+id/link_etxt"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_btn"
        android:text="@string/title_activity_add"
        android:layout_marginTop="10dp"/>
</LinearLayout>